--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
 <nav class="w3-sidebar w3-bar-block w3-card w3-animate-left w3-center" style="display:none" id="mySidebar">
   <h1 class="w3-xxxlarge w3-text-theme">Menu</h1>
   <button class="w3-bar-item w3-button" onclick="w3_close()">Close <i class="fa fa-remove"></i></button>
-  <a href="{{ url_for('edit') }}" class="w3-bar-item w3-button">Bearbeiten</a>
+  <a href="{{ url_for('edit_new', satznr = 0) }}" class="w3-bar-item w3-button">Bearbeiten</a>
   <a href="{{ url_for('new') }}" class="w3-bar-item w3-button">Neu</a>
   <a href="{{ url_for('build') }}" class="w3-bar-item w3-button">Varianten generieren</a>
   <a href="{{ url_for('vari', variNr = 0, variPerPage = 10) }}" class="w3-bar-item w3-button">Varianten ansehen</a>
@@ -43,7 +43,7 @@
 	<div class="w3-third w3-container w3-black w3-padding" id="myHeader">
     <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i>
   </div>
-  <a href="{{ url_for('edit')}}">
+  <a href="{{ url_for('edit_new', satznr = 0) }}">
   <div class="w3-third w3-container">
 	<h4 class="w3-center">{{ pageTitle }}</h4>
   </div>
